[#746] FEEL prefix: Add tests for mappings of FEEL types